# sparql-rs

./: Cargo.toml
apps/arq/: Cargo.toml
apps/arq/src/: main.rs
libs/arq-lib/: Cargo.toml
libs/arq-lib/src/: lib.rs  prefix_map.rs
