[package]
name = "arq"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
oxigraph = "0.2.1"
arq-lib = { path = "../../libs/arq-lib" }
